--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800;900&display=swap");
 
 * {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Montserrat", sans-serif !important;
 }
 
 html,
@@ -186,17 +186,31 @@ section#project-4 {
 
 .technologies {
   background-color: #65cdb5;
+  background-image: url("./assets/balls2.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: right;
   text-align: center;
   padding: 1em;
 }
 
 .technologies > h1 {
+  position: relative;
+  z-index: 0;
   color: #fff;
   font-size: 4em;
   font-weight: 900;
   opacity: 0.3;
   overflow-wrap: anywhere;
   text-align: left;
+}
+
+.items {
+  display: flex;
+  flex-direction: column;
+  place-items: center;
+  position: relative;
+  z-index: 1;
 }
 
 .roll {
@@ -336,5 +350,98 @@ section#project-4 {
   45%,
   55% {
     transform: translateY(80px);
+  }
+}
+
+@media (max-width: 390px) {
+  .technologie {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media (min-width: 800px) {
+  header {
+    display: flex;
+    height: 60px;
+    justify-content: center;
+    align-content: center;
+  }
+
+  .navbar {
+    place-content: space-around;
+  }
+
+  .navbar > a {
+    width: 50%;
+  }
+
+  .navbar > ul > li > a {
+    color: #fff;
+    font-size: 1.5rem;
+    font-weight: 500;
+  }
+
+  .navbar > ul > li {
+    padding: 1em;
+  }
+  .headline > h1 {
+    color: #fff;
+    font-size: 3.3rem;
+    font-weight: 900;
+  }
+
+  .roll {
+    display: flex;
+    flex-direction: row;
+  }
+  .roll > .technologie {
+    margin-right: 2em;
+  }
+}
+
+@media (min-width: 1281px) {
+  .section-1 {
+    height: 90vh;
+    background-size: auto;
+  }
+
+  .hero {
+    width: 61%;
+    padding: 2em;
+    padding-left: 30%;
+    padding-top: 15%;
+  }
+
+  .headline > h1 {
+    font-size: 6rem;
+  }
+
+  .headline > h2 {
+    font-size: 2.5rem;
+    font-weight: 500;
+  }
+
+  .icons {
+    width: 4em;
+    margin-top: 0.5em;
+    margin-right: 0.7em;
+  }
+
+  .cta {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-top: 2em;
+  }
+
+  .cta-svg {
+    height: 9em;
+  }
+
+  .cta > h3 {
+    font-size: 1.5rem;
+    font-weight: 300;
+    margin-top: 0.5em;
   }
 }
